--- a/style.css
+++ b/style.css
@@ -7,6 +7,19 @@ box-sizing: border-box;
     height: 500px;
 }
 
+.screen-display {
+    height: 35px ;
+    width:  380px;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 4px;
+    border-color: lightgray;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .button-container {
 
     display: flex;
@@ -27,7 +40,7 @@ box-sizing: border-box;
     display: flex;
     width: 100px;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
@@ -50,3 +63,4 @@ box-sizing: border-box;
         border-radius: 4px;
         background-color: grey;
 }
+
