--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@
 box-sizing: border-box;
 }
 
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+}
+
 .main-div {
     width: 500px;
     height: 500px;
