--- a/style.css
+++ b/style.css
@@ -62,6 +62,11 @@ body {
     background-color: grey;
 }
 
+.operator.press {
+
+    background-color: greenyellow;
+}
+
 .operator {
         height: 40px;
         width: 75px;
