--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .screen-display {
-    height: 35px ;
+    height: 100px ;
     width:  380px;
     border-style: solid;
     border-width: 1px;
@@ -24,8 +24,18 @@ body {
     border-color: lightgray;
     margin-bottom: 10px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content:space-evenly;
+    align-items: flex-end;
+    flex-direction: column;
+    padding: 7px;
+}
+
+.prev-display {
+    font-size: 20px;
+}
+
+.current-display {
+    font-size: 28px;
 }
 
 .button-container {
