Change calculator file.
so i was really stuck with the logic of the "program". Couldnt find the
solution so i made a fresh start.
The idea was to keep the values of the numbers and operators in
separated functions and then work with the functions.
Its not finished yet but it does the core work.

--- a/style.css
+++ b/style.css
@@ -28,14 +28,17 @@ body {
     align-items: flex-end;
     flex-direction: column;
     padding: 7px;
+    flex-wrap: wrap;
 }
 
 .prev-display {
     font-size: 20px;
+
 }
 
 .current-display {
     font-size: 28px;
+
 }
 
 .button-container {
