--- a/style.css
+++ b/style.css
@@ -75,10 +75,6 @@ body {
     background-color: grey;
 }
 
-.operator.press {
-
-    background-color: greenyellow;
-}
 
 .op-but {
         height: 40px;
@@ -88,5 +84,9 @@ body {
         align-items: center;
         border-radius: 4px;
         background-color: grey;
+}
+
+.op-but.press {
+    background-color: yellowgreen;
 }
 
